2009-11-07  Bartosz Kosiorek  <gang65@poczta.onet.pl>

	Add more comments to ViaSetSecondaryFIFO, add panel scale support for 
 	CLE266 and KM400, fix bug with malloc.

	* src/via_bandwidth.c: (ViaSetSecondaryFIFO):
	* src/via_panel.c: (ViaPanelScale), (ViaPanelGetNativeDisplayMode):

2009-09-26  Bartosz Kosiorek  <gang65@poczta.onet.pl>

	Save/restore ECK Clock Synthesizer

	* src/via_driver.c: (VIASave), (VIARestore):
	* src/via_driver.h:

2009-09-21  Bartosz Kosiorek  <gang65@poczta.onet.pl>

	Fixed bug with panel autodetection using
	ViaPanelGetNativeModeFromScratchPad function

	* src/via_panel.c:

2009-09-21  Bartosz Kosiorek  <gang65@poczta.onet.pl>

	Fixed problem with backlite (Ticket #308)

	* src/via_lvds.c: (ViaLVDSSoftwarePowerFirstSequence),
	(ViaLVDSSoftwarePowerSecondSequence),
	(ViaLVDSHardwarePowerFirstSequence),
	(ViaLVDSHardwarePowerSecondSequence), (ViaLVDSPower):

2009-09-15  Bartosz Kosiorek  <gang65@poczta.onet.pl>

	TV-out VT1625 chip support

	* src/via_bios.h:
	* src/via_crtc.c: (ViaFirstCRTCSetMode):
	* src/via_display.c: (ViaDisplayEnableDVO), (ViaDisplayDisableDVO),
	(ViaDisplaySetStreamOnDVO):
	* src/via_driver.c: (VIASetupDefaultOptions), (VIAPreInit):
	* src/via_mode.c: (ViaTVSetMode), (ViaOutputsSelect), (ViaModeSet):
	* src/via_vt162x.c: (ViaSetTVClockSource), (VT1622ModeI2C),
	(VT1622ModeCrtc):
	* src/via_vt162x.h:

2009-09-15  Bartosz Kosiorek  <gang65@poczta.onet.pl>

	Cursor support speedup

	* src/via_cursor.c: (viaHWCursorInit), (viaCursorStore),
	(viaCursorRestore), (viaShowCursor), (viaHideCursor),
	(viaSetCursorPosition), (viaLoadCursorImage), (viaLoadCursorARGB):

2009-09-14  Bartosz Kosiorek  <gang65@poczta.onet.pl>

	Removed two old variables:
	pBIOSInfo->panelX
	pBIOSInfo->panelY
	
	and replaced it by:
	pBIOSInfo->Panel->NativeMode->Width
	pBIOSInfo->Panel->NativeMode->Height

	* src/via_bios.h:
	* src/via_driver.c: (VIASetupDefaultOptions):
	* src/via_mode.c: (ViaPanelGetIndex), (VIASetLCDMode),